# Bezier-Curve

./: CMakeLists.txt  bezierCurve.cpp  bezierCurve.h  bezierFile.cpp  bezierSurface.cpp  bezierSurface.h  main.cpp
